@@ -91,7 +91,7 @@ program eis_glide
 
   time = model%numerics%tstart
   call eis_climate(climate,model,time)
-  call spinup_lithot(model)
+  call spinup_lithot(model,model%lithot)
 
   do while(time.le.model%numerics%tend)    
      call glide_tstep_p1(model,time)
